third_party/move/move-compiler-v2/tests/bytecode-generator/v1-commands/break_outside_loop.exp
// -- Model dump before first bytecode pipeline
module <SELF>_0 {
    private fun main() {
        break
    }
} // end <SELF>_0

// -- Sourcified model before first bytecode pipeline
script {
    fun main() {
        break
    }
}


Diagnostics:
error: missing enclosing loop statement
  ┌─ tests/bytecode-generator/v1-commands/break_outside_loop.move:3:5
  │
3 │     break
  │     ^^^^^
